Fix wrong padding on code blocks.

--- a/resources/codox/css/default.css
+++ b/resources/codox/css/default.css
@@ -262,7 +262,7 @@ h4.type,
 h4.dynamic,
 h4.added,
 h4.deprecated {
-    margin: 3px 10px 10px 0;
+    margin: 3px 10px 10spx 0;
     font-weight: bold;
     font-variant: small-caps;
 }
@@ -371,11 +371,7 @@ p {
 }
 
 .markdown code, .src-link a {
-    /* background: #f6f6f6; */
-    /* border: 1px solid #e4e4e4; */
     border-radius: 2px;
-    /* font-size: 14px; */
-    padding: 0px 3px;
     font-size: 0.8em;
     color: #444;
 }
